# nonebot-plugin-guesswho

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_guesswho/: __init__.py  check.py  config.py  controller.py  handler.py  utils.py
nonebot_plugin_guesswho/arknights/: __init__.py  download.py
nonebot_plugin_guesswho/azurlane/: __init__.py  download.py  utils.py
nonebot_plugin_guesswho/data/: arknights_data.json  azurlane_data.json  bluearchive_data.json
