[project]
name = "nonebot-plugin-guesswho"
dynamic = ["0.1.0"]
description = "NoneBot2的猜角色小游戏插件"
authors = [{ name = "WuSheng125", email = "657760184@qq.com" }]
dependencies = ["nonebot2>=2.3.3", "nonebot-plugin-alconna>=0.52.2"]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/WuSheng125/nonebot-plugin-guesswho"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_guesswho/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
